--- a/.gitignore
+++ b/.gitignore
@@ -77,7 +77,7 @@ tmp/
 *.bak
 *.swp
 *~.nib
-local.properties
+# local.properties
 .settings/
 .loadpath
 .recommenders
@@ -147,4 +147,4 @@ local.properties
 .LSOverride
 
 # Secrets
-.env
+# .env
