--- a/api/bin/main/application-postgres.properties
+++ b/api/bin/main/application-postgres.properties
@@ -4,7 +4,7 @@ logging.level.org.hibernate.SQL=debug
 # logging.level.org.hibernate.type.descriptor.sql=trace
 
 # DB credentials (gitIgnored)
-spring.config.import=.env[.properties]
+spring.config.import=database.env[.properties]
 spring.jpa.properties.javax.persistence.query.timeout=10000
 
 database.username=${DATABASE_USERNAME}
@@ -13,7 +13,10 @@ database.host=${DATABASE_HOST}
 database.port=${DATABASE_PORT}
 database.sid=${DATABASE_SID}
 
-spring.datasource.username=${database.username}
-spring.datasource.password=${database.password}
-spring.datasource.url=jdbc:oracle:thin:@${database.host}:${database.port}/${database.sid}
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.username=compose-postgres
+spring.datasource.password=compose-postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/compose-postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=none
+
+spring.sql.init.mode=always
