--- a/api/bin/main/application-postgres.properties
+++ b/api/bin/main/application-postgres.properties
@@ -7,16 +7,18 @@ logging.level.org.hibernate.SQL=debug
 spring.config.import=database.env[.properties]
 spring.jpa.properties.javax.persistence.query.timeout=10000
 
-database.username=${DATABASE_USERNAME}
-database.password=${DATABASE_PASSWORD}
-database.host=${DATABASE_HOST}
-database.port=${DATABASE_PORT}
-database.sid=${DATABASE_SID}
+# database.username=${DATABASE_USERNAME}
+# database.password=${DATABASE_PASSWORD}
+# database.host=${DATABASE_HOST}
+# database.port=${DATABASE_PORT}
+# database.sid=${DATABASE_SID}
 
-spring.datasource.username=compose-postgres
-spring.datasource.password=compose-postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/compose-postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=${SPRING_DATABASE_URL}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER-CLASS-NAME}
+# spring.jpa.database-platform=${SPRING_JPA_DATABASE-PLATFORM}
 spring.jpa.hibernate.ddl-auto=none
 
-spring.sql.init.mode=always
+# spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=create
