--- a/api/bin/main/application-postgres.properties
+++ b/api/bin/main/application-postgres.properties
@@ -18,7 +18,8 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.url=${SPRING_DATABASE_URL}
 spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER-CLASS-NAME}
 # spring.jpa.database-platform=${SPRING_JPA_DATABASE-PLATFORM}
-spring.jpa.hibernate.ddl-auto=none
+# spring.jpa.hibernate.ddl-auto=none
 
 # spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=create
+# spring.jpa.hibernate.ddl-auto=none
+spring.datasource.initialization-mode=always
