temporary id fix

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ replay_pid*
 # GRADLE
 # ------------------------------------------------------------------------------
 
-.gradle
+.gradle/**
 **/build/
 !src/**/build/
 
