--- a/api/src/main/resources/application-h2.properties
+++ b/api/src/main/resources/application-h2.properties
@@ -6,5 +6,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
+spring.sql.init.schema-locations=classpath:schema-h2.sql
 
 spring.jpa.hibernate.ddl-auto=none
