--- a/api/src/main/resources/application-postgres.properties
+++ b/api/src/main/resources/application-postgres.properties
@@ -19,7 +19,9 @@ spring.datasource.url=${SPRING_DATABASE_URL}
 spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER-CLASS-NAME}
 # spring.jpa.database-platform=${SPRING_JPA_DATABASE-PLATFORM}
 # spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.data-locations=classpath:data.sql
+spring.sql.init.schema-locations=classpath:schema-postgres.sql
 
 # spring.sql.init.mode=always
 # spring.jpa.hibernate.ddl-auto=none
-spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
