some sql schema setup + readme for pgadmin connection

--- a/api/src/main/resources/application-pgadmin.properties
+++ b/api/src/main/resources/application-pgadmin.properties
@@ -4,8 +4,14 @@ logging.level.org.hibernate.SQL=debug
 # logging.level.org.hibernate.type.descriptor.sql=trace
 
 # DB credentials (gitIgnored)
-spring.config.import=heroku.env[.properties]
+spring.config.import=pgadmin.env[.properties]
 spring.jpa.properties.javax.persistence.query.timeout=10000
+
+# database.username=${DATABASE_USERNAME}
+# database.password=${DATABASE_PASSWORD}
+# database.host=${DATABASE_HOST}
+# database.port=${DATABASE_PORT}
+# database.sid=${DATABASE_SID}
 
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
