--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ replay_pid*
 # GRADLE
 # ------------------------------------------------------------------------------
 
+.gradle/
 .gradle/**
 **/build/
 !src/**/build/
