--- a/api/src/main/resources/pgadmin.env
+++ b/api/src/main/resources/pgadmin.env
@@ -1,4 +1,4 @@
-local_password=password
+local_password=awesome16
 
 SPRING_DATASOURCE_USERNAME=postgres
 SPRING_DATASOURCE_PASSWORD=${local_password}
