--- a/api/bin/main/application.properties
+++ b/api/bin/main/application.properties
@@ -11,3 +11,5 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/api-docs/swagger-ui
 springdoc.swagger-ui.operationsSorter=method
 springdoc.packagesToScan=ca.me.proj.controller
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration,org.springframework.boot.actuate.autoconfigure.security.servlet.ManagementWebSecurityAutoConfiguration
