--- a/api/bin/main/application.properties
+++ b/api/bin/main/application.properties
@@ -1,4 +1,5 @@
-logging.level.root=INFO
+logging.level.root=OFF
+logging.level.org.springframework=OFF
 
 # spring.jpa.open-in-view=false 
 # spring.jpa.hibernate.use-new-id-generator-mappings=false
