--- a/api/sonar-project.properties
+++ b/api/sonar-project.properties
@@ -1,6 +1,6 @@
 #local configuration
-# sonar.host.url=http://localhost:9000
+sonar.host.url=http://localhost:9000
 sonar.projectKey=DCMS
-# sonar.login=8d7189b9a7351d279a09f72fe3b5f1723f35a5d2
+sonar.login=bd506c92fe55a8f741a3584d7db7862b1de80e08
 # sonar.exclusions=**/somepath/**/*.java
 # sonar.java.source=11
