--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
             # mandatory
             -Dsonar.projectKey=BillyBolton_DCMS-tested
             -Dsonar.organization=BillyBolton
-            -Dsonar.projectBaseDir=./api/src/main/java/ca/me/proj
+            -Dsonar.projectBaseDir=**/api/**
             #-Dsonar.sources= # optional, default is project base directory
             # Comma-separated paths to directories containing test source files.
             #-Dsonar.tests= # optional. For more info about Code Coverage, please refer to https://docs.sonarcloud.io/enriching/test-coverage/overview/
