--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
             # mandatory
             -Dsonar.projectKey=BillyBolton_DCMS-tested
             -Dsonar.organization=BillyBolton
-            -Dsonar.sources= ./api/**
+            # -Dsonar.sources= ./api/**
             # Comma-separated paths to directories containing main source files.
             #-Dsonar.sources= # optional, default is project base directory
             # When you need the analysis to take place in a directory other than the one from which it was launched
