--- a/api/sonar-project.properties
+++ b/api/sonar-project.properties
@@ -1,7 +1,7 @@
 #local configuration
 sonar.host.url=https://sonarcloud.io
 sonar.organization=billybolton
-sonar.projectKey=DCMS-tested
+sonar.projectKey=BillyBolton_DCMS-tested
 sonar.login=bd506c92fe55a8f741a3584d7db7862b1de80e08
 secrets.GITHUB_TOKEN=billybolton
 # secrets.SONAR_TOKEN=8c165ded166e60d9a35901defabb01cd61ab2848
