--- a/api/sonar-project.properties
+++ b/api/sonar-project.properties
@@ -1,9 +1,6 @@
-#local configuration
-sonar.host.url=https://sonarcloud.io
-sonar.organization="billybolton"
-sonar.projectKey="BillyBolton_DCMS-tested"
-sonar.login=bd506c92fe55a8f741a3584d7db7862b1de80e08
-GITHUB_TOKEN=billybolton
-SONAR_TOKEN=8c165ded166e60d9a35901defabb01cd61ab2848
-# sonar.exclusions=**/somepath/**/*.java
+# #local configuration
+# sonar.host.url=http://localhost:9000
+# sonar.projectKey=api
+# sonar.login=8d7189b9a7351d279a09f72fe3b5f1723f35a5d2
+# sonar.exclusions=**/App.java
 # sonar.java.source=11
