--- a/build.gradle
+++ b/build.gradle
@@ -20,18 +20,10 @@ subprojects {
 	  mavenCentral()
   }
 
-  //   sonarqube {
-  //     properties {
-  //       property "sonar.projectKey", "BillyBolton_DCMS-tested"
-  //       property "sonar.organization", "billybolton"
-  //       property "sonar.host.url", "https://sonarcloud.io"
-  //     }
-  // }
-
   sonarqube {
     properties {
         def props = new Properties()
-        file("sonar-project.properties").withInputStream { props.load(it)}
+        file("../sonar-project.properties").withInputStream { props.load(it)}
         props.each {
           property("${it.key}", "${it.value}")
         }
