--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,5 @@
 sonar.host.url=https://sonarcloud.io
 sonar.projectKey=BillyBolton_DCMS-tested
 sonar.organization=billybolton
-# sonar.login=8d7189b9a7351d279a09f72fe3b5f1723f35a5d2
-# sonar.exclusions=**/App.java
-# sonar.java.source=11
+sonar.exclusions=**/App.java
+sonar.java.source=11
