--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,5 +2,5 @@
 sonar.host.url=https://sonarcloud.io
 sonar.projectKey=BillyBolton_DCMS-tested
 sonar.organization=billybolton
-sonar.exclusions=**/App.java
+# sonar.exclusions=**/App.java
 sonar.java.source=11
