--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
   id 'eclipse' // easier use in eclipse and other IDEs
-   id "org.sonarqube" version "3.3"
+  //  id "org.sonarqube" version "3.3"
 }
 
 // pulls out properties from a global properties file
@@ -20,14 +20,14 @@ subprojects {
 	  mavenCentral()
   }
 
-  sonarqube {
-    properties {
-        def props = new Properties()
-        file("../sonar-project.properties").withInputStream { props.load(it)}
-        props.each {
-          property("${it.key}", "${it.value}")
-        }
-    }
-}
+  //   sonarqube {
+  //     properties {
+  //         def props = new Properties()
+  //         file("../sonar-project.properties").withInputStream { props.load(it)}
+  //         props.each {
+  //           property("${it.key}", "${it.value}")
+  //         }
+  //     }
+  // }
 }
 
