--- a/api/build.gradle
+++ b/api/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.5.4'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
-	// id "org.sonarqube" version "3.3"
+	id "org.sonarqube" version "3.3"
   id 'java-library' //important for QDSL
   id 'jacoco'
   id 'war' //important for QDSL
@@ -66,15 +66,15 @@ jacocoTestReport {
 }
 test.finalizedBy jacocoTestReport
 
-// sonarqube {
-//     properties {
-//         def props = new Properties()
-//         file("sonar-project.properties").withInputStream { props.load(it)}
-//         props.each {
-//           property("${it.key}", "${it.value}")
-//         }
-//     }
-// }
+sonarqube {
+    properties {
+        def props = new Properties()
+        file("sonar-project.properties").withInputStream { props.load(it)}
+        props.each {
+          property("${it.key}", "${it.value}")
+        }
+    }
+}
 
 // sonarqube {
 //   properties {
@@ -85,9 +85,9 @@ test.finalizedBy jacocoTestReport
 //   }
 // }
 
-// tasks.named('sonarqube').configure {
-//     dependsOn test
-// }
+tasks.named('sonarqube').configure {
+    dependsOn test
+}
 
 configurations {
   developmentOnly
