--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,4 +37,4 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         # run: ./gradlew sonarqube --info -Dsonar.projectKey=BillyBolton_DCMS-tested -Dsonar.organization=billybolton -Dsonar.host.url=https://sonarcloud.io -Dsonar.login="$SONAR_TOKEN"
-        run: ./gradlew api:sonarqube --info -Dsonar.projectKey=BillyBolton_DCMS-tested -Dsonar.organization=billybolton -Dsonar.host.url=https://sonarcloud.io -Dsonar.login="$SONAR_TOKEN"
+        run: ./gradlew api:sonarqube --info -Dsonar.projectKey=BillyBolton_DCMS-tested -Dsonar.organization=billybolton -Dsonar.host.url=https://sonarcloud.io -Dsonar.login="$SONAR_TOKEN" api:pitest
